force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Txn_History__c/BMCServiceDesk__SLA_Milestone_Change_Txn_History__c.object-meta.xml
<CustomObject>
    <description>Stores the change request milestones that are achieved or canceled for a service transaction.</description>
    <label>SLA Milestone Change History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SLA Milestone Change History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Change History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>