force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Txn_History__c/fields/BMCServiceDesk__Action_Performed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Action_Performed__c</fullName>
    <description>Milestone action that was performed.</description>
    <label>Action_Performed</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>