force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Txn_History__c/fields/BMCServiceDesk__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>