force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Txn_History__c/fields/BMCServiceDesk__FKChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to change</description>
    <label>Change</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>SLA Milestone Change History</relationshipLabel>
    <relationshipName>SLA_Milestone_Change_Txn_History</relationshipName>
    <type>Lookup</type>
</CustomField>