force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Txn_History__c/fields/BMCServiceDesk__FKChange_Service_Target__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange_Service_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Change Service Target</description>
    <label>Change Service Target</label>
    <referenceTo>BMCServiceDesk__Change_Request_Service_Target__c</referenceTo>
    <relationshipLabel>SLA Milestone Change History</relationshipLabel>
    <relationshipName>SLA_Milestone_Change_Txn_History</relationshipName>
    <type>Lookup</type>
</CustomField>